# python-base

./: .dockerignore  .gitignore  Makefile  compose.yaml
app/: pyproject.toml
docker/: Dockerfile
