[project]
name = "uv-docker"
version = "0.1.0"
description = "A project to demonstrate the use of Docker with a Python project."
readme = "README.md"
requires-python = ">=3.12, <3.13"

dependencies = [
  "ipykernel==6.29.5",
  "python-dotenv==1.0.1",
  "pyprojroot==0.3.0",
  "pyyaml==6.0.2",
  "pillow==11.1.0",
  "pdf2image==1.17.0",
  "aiofiles==24.1.0",
  "pandas==2.2.3",
  "jmespath==1.0.1",
  "openpyxl==3.1.5",
  "matplotlib==3.10.1",
  "seaborn==0.13.2",
]

[tool.uv]
dev-dependencies = [
  "ruff==0.9.6",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
extend-include = [
    "*.ipynb",
]
extend-ignore = [
  "INP001",
]

line-length = 120
target-version = "py312"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = ["ALL"]
ignore = [
    "COM812", "COM819",
    "D100", "D203", "D213", "D300",
    "E111", "E114", "E117",
    "ISC001", "ISC002",
    "Q000", "Q001", "Q002", "Q003",
    "W191",
    "ERA001",
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"


